Added initial MMU code and some error handling stuff.

--- a/src/Makefile
+++ b/src/Makefile
@@ -2,13 +2,14 @@ CC=      arm-linux-gnueabi-gcc
 AS=      arm-linux-gnueabi-as
 LD=      arm-linux-gnueabi-ld
 OBJCOPY= arm-linux-gnueabi-objcopy
-CFLAGS= -I. -nostdlib -nostartfiles -ffreestanding -std=c99
+LDFLAGS= -nostdlib -nostartfiles
+CFLAGS= -I. -nostdlib -nostartfiles -ffreestanding -fno-common -static -march=armv7-a -marm -std=c99
 
-init.bin: boot/init.o boot/entry.o boot/early_printk.o boot/device_tree.o utils/base.o utils/base-asm.o
-	$(LD) -T memmap $^ -o init.elf
+init.bin: boot/init.o boot/entry.o boot/early_printk.o utils/base.o utils/base-asm.o memory/mmu.o memory/mmu-asm.o
+	$(LD) $(LDFLAGS) -T memmap $^ -o init.elf
 	$(OBJCOPY) init.elf -O binary init.bin
 
 .PHONY: clean
 
 clean:
-	rm -rf init.elf init.bin boot/init.o boot/entry.o boot/early_printk.o boot/device_tree.o utils/base.o utils/base-asm.o
+	rm -rf init.elf init.bin boot/init.o boot/entry.o boot/early_printk.o utils/base.o utils/base-asm.o memory/mmu.o memory/mmu-asm.o
