Got MMU working.

--- a/src/Makefile
+++ b/src/Makefile
@@ -2,8 +2,8 @@ CC=      arm-linux-gnueabi-gcc
 AS=      arm-linux-gnueabi-as
 LD=      arm-linux-gnueabi-ld
 OBJCOPY= arm-linux-gnueabi-objcopy
-LDFLAGS= -nostdlib -nostartfiles
-CFLAGS= -I. -nostdlib -nostartfiles -ffreestanding -fno-common -static -march=armv7-a -marm -std=c99
+LDFLAGS= -nostdlib -nostartfiles -pie
+CFLAGS= -I. -nostdlib -nostartfiles -ffreestanding -fno-common -static -fPIC -march=armv7-a -marm -std=c99
 
 init.bin: boot/init.o boot/entry.o boot/early_printk.o utils/base.o utils/base-asm.o memory/mmu.o memory/mmu-asm.o
 	$(LD) $(LDFLAGS) -T memmap $^ -o init.elf
