Renamed linker script to something more appropriate.

--- a/src/Makefile
+++ b/src/Makefile
@@ -6,7 +6,7 @@ LDFLAGS= -nostdlib -nostartfiles -pie
 CFLAGS= -I. -nostdlib -nostartfiles -ffreestanding -fno-common -static -fPIC -march=armv7-a -marm -std=c99
 
 init.bin: boot/init.o boot/entry.o boot/early_printk.o utils/base.o utils/base-asm.o memory/mmu.o memory/mmu-asm.o
-	$(LD) $(LDFLAGS) -T memmap $^ -o init.elf
+	$(LD) $(LDFLAGS) -T init.lds $^ -o init.elf
 	$(OBJCOPY) init.elf -O binary init.bin
 
 .PHONY: clean
