Exposed issue in how flushing TLB works on start.

--- a/src/Makefile
+++ b/src/Makefile
@@ -5,11 +5,16 @@ OBJCOPY= arm-linux-gnueabi-objcopy
 LDFLAGS= -nostdlib -nostartfiles -pie
 CFLAGS= -I. -nostdlib -nostartfiles -ffreestanding -fno-common -static -fPIC -march=armv7-a -marm -std=c99
 
-init.bin: boot/init.o boot/entry.o boot/early_printk.o utils/base.o utils/base-asm.o memory/mmu.o memory/mmu-asm.o
+OBJS= boot/init.o boot/entry.o boot/early_printk.o \
+			utils/base.o utils/base-asm.o \
+			memory/mmu-init.o memory/mmu-init-asm.o \
+			memory/mmu.o memory/mmu-asm.o memory/mmap.o
+
+init.bin: $(OBJS)
 	$(LD) $(LDFLAGS) -T init.lds $^ -o init.elf
 	$(OBJCOPY) init.elf -O binary init.bin
 
 .PHONY: clean
 
 clean:
-	rm -rf init.elf init.bin boot/init.o boot/entry.o boot/early_printk.o utils/base.o utils/base-asm.o memory/mmu.o memory/mmu-asm.o
+	rm -rf init.elf init.bin $(OBJS)
