Renamed entry code.

--- a/src/Makefile
+++ b/src/Makefile
@@ -5,21 +5,21 @@ OBJCOPY= arm-linux-gnueabi-objcopy
 LDFLAGS= -nostdlib -nostartfiles -pie
 CFLAGS= -I. -nostdlib -nostartfiles -ffreestanding -fno-common -static -fPIC -march=armv7-a -marm -std=c99
 
-INIT_OBJS= boot/entry.o boot/init.o
+ENTRY_OBJS= boot/entry-asm.o boot/entry.o
 
 OBJS= boot/kernel-start.o \
 			boot/early_printk.o \
 			utils/base.o utils/base-asm.o \
 #			memory/mmu.o memory/mmu-asm.o memory/mmap.o
 
-sys.bin: init.bin kernel.bin
-	cat init.bin > sys.bin
-	dd if=/dev/zero bs=1 count=$(shell expr 4096 - $(shell stat -c %s init.bin)) >> sys.bin
+sys.bin: entry.bin kernel.bin
+	cat entry.bin > sys.bin
+	dd if=/dev/zero bs=1 count=$(shell expr 4096 - $(shell stat -c %s entry.bin)) >> sys.bin
 	cat kernel.bin >> sys.bin
 
-init.bin: $(INIT_OBJS)
-	$(LD) $(LDFLAGS) -T init.lds $^ -o init.elf
-	$(OBJCOPY) init.elf -O binary init.bin
+entry.bin: $(ENTRY_OBJS)
+	$(LD) $(LDFLAGS) -T entry.lds $^ -o entry.elf
+	$(OBJCOPY) entry.elf -O binary entry.bin
 
 kernel.bin: $(OBJS)
 	$(LD) $(LDFLAGS) -T kernel.lds $^ -o kernel.elf
@@ -28,4 +28,4 @@ kernel.bin: $(OBJS)
 .PHONY: clean
 
 clean:
-	rm -rf sys.bin kernel.elf kernel.bin init.elf init.bin $(OBJS) $(INIT_OBJS)
+	rm -rf sys.bin kernel.elf kernel.bin entry.elf entry.bin $(OBJS) $(ENTRY_OBJS)
