Added a bunch of memory stuff.

--- a/src/Makefile
+++ b/src/Makefile
@@ -10,7 +10,7 @@ ENTRY_OBJS= boot/entry-asm.o boot/entry.o
 OBJS= boot/kernel-start-asm.o boot/kernel-start.o \
 			boot/early_printk.o \
 			utils/base.o utils/base-asm.o \
-#			memory/mmu.o memory/mmu-asm.o memory/mmap.o
+			memory/kmalloc.o memory/mmap.o memory/mmu.o memory/mmu-asm.o
 
 sys.bin: entry.bin kernel.bin
 	cat entry.bin > sys.bin
