Moved command to get file size to Makefile variable.

--- a/src/Makefile
+++ b/src/Makefile
@@ -3,7 +3,8 @@ AS=      arm-linux-gnueabi-as
 LD=      arm-linux-gnueabi-ld
 OBJCOPY= arm-linux-gnueabi-objcopy
 LDFLAGS= -nostdlib -nostartfiles -pie
-CFLAGS= -I. -nostdlib -nostartfiles -ffreestanding -fno-common -static -fPIC -march=armv7-a -marm -std=c99
+CFLAGS=  -I. -nostdlib -nostartfiles -ffreestanding -fno-common -static -fPIC -march=armv7-a -marm -std=c99
+GETSIZE= stat -c %s
 
 ENTRY_OBJS= boot/entry-asm.o boot/entry.o
 
@@ -14,7 +15,7 @@ OBJS= boot/kernel-start-asm.o boot/kernel-start.o \
 
 sys.bin: entry.bin kernel.bin
 	cat entry.bin > sys.bin
-	dd if=/dev/zero bs=1 count=$(shell expr 4096 - $(shell stat -c %s entry.bin)) >> sys.bin
+	dd if=/dev/zero bs=1 count=$(shell expr 4096 - $(shell $(GETSIZE) entry.bin)) >> sys.bin
 	cat kernel.bin >> sys.bin
 
 entry.bin: $(ENTRY_OBJS)
